Final changes in c4, forgot to commit before

--- a/HW1/HW1c.ipynb
+++ b/HW1/HW1c.ipynb
@@ -436,15 +436,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To distinguish other relevant scalar quantities, we consider again the dimensionless numbers that can be used to describe this system. Two examples include:\n",
-    "1. The density of the liquid in the channel.\n",
-    "2. The surface tension of the gas-liquid interface.\n",
-    "\n",
-    "\n",
-    "\n",
-    "include the density and viscosity of the liquid in the channel and the density of the gas in the bubble itself. \n",
-    "\n",
-    "Refer back to dimensionless numbers and influence of viscosity, density."
+    "To distinguish other relevant scalar quantities, we consider again the dimensionless numbers that can be used to describe this system. The scalar quantities making up these numbers include density, viscosity and surface tension. We highlight two important examples:\n",
+    "1. The *viscosity* of the liquid in the channel. This has a large influence on wake behaviour, and therefore on the heat transfer through the channel. For a more viscous liquid, the Reynolds number would increase, leading to a more wobbly bubble (see the $\\text{Re}(\\text{Bo})$ chart above) with a more turbulent wake. A viscometer or rheometer can be used to determine the viscosity, by measuring the stress on a rotating cylinder or plate geometry, respectively.\n",
+    "2. The *surface tension* of the gas-liquid interface. This scalar shows up in the Bond number, where it influences the shape of the bubble: the larger the surface tension, the more spherical the bubble will be. For very low surface tension values, the bubble will become hollow. This, in turn, will play a role in the heat transfer too (TODO: HOW?)"
    ]
   }
  ],
