--- a/HW1/ETPoF_HW1.ipynb
+++ b/HW1/ETPoF_HW1.ipynb
@@ -501,7 +501,7 @@
    "id": "ebe13a49",
    "metadata": {},
    "source": [
-    "### b6) **Voltage vs. temperature**"
+    "### 1b6) **Voltage vs. temperature**"
    ]
   },
   {
