Added units to python cell outputs

--- a/HW1/ETPoF_HW1.ipynb
+++ b/HW1/ETPoF_HW1.ipynb
@@ -114,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean velocity (+- std) with bubbles = 0.402 +- 0.116\n",
-      "                    without bubbles = 0.399 +- 0.040\n"
+      "Mean velocity (+- std) with bubbles = 0.402 +- 0.116 m/s\n",
+      "                    without bubbles = 0.399 +- 0.040 m/s\n"
      ]
     }
    ],
@@ -135,9 +135,9 @@
     "std_nobub = np.std(vmask)\n",
     "\n",
     "print(\n",
-    "    f'Mean velocity (+- std) with bubbles = {mean_bub:.3f} +- {std_bub:.3f}')\n",
+    "    f'Mean velocity (+- std) with bubbles = {mean_bub:.3f} +- {std_bub:.3f} m/s')\n",
     "print(\n",
-    "    f'                    without bubbles = {mean_nobub:.3f} +- {std_nobub:.3f}')"
+    "    f'                    without bubbles = {mean_nobub:.3f} +- {std_nobub:.3f} m/s')"
    ]
   },
   {
@@ -454,13 +454,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average residual: 0.08\n"
+      "Average residual: 0.08 K\n"
      ]
     }
    ],
    "source": [
     "err = np.average(abs(residual))\n",
-    "print(f'Average residual: {round(err, 2)}')"
+    "print(f'Average residual: {round(err, 2)} K')"
    ]
   },
   {
@@ -790,8 +790,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean temperature (+- std) with bubbles: 295.796 +- 0.032\n",
-      "                       without bubbles: 295.810 +- 0.035\n"
+      "Mean temperature (+- std) with bubbles: 295.796 +- 0.032 K\n",
+      "                       without bubbles: 295.810 +- 0.035 K\n"
      ]
     }
    ],
@@ -808,8 +808,8 @@
     "T_mean_bub, T_std_bub = [np.mean(T_bub), np.std(T_bub)]\n",
     "T_mean_nobub, T_std_nobub = [np.mean(T_nobub), np.std(T_nobub)]\n",
     "\n",
-    "print(f'Mean temperature (+- std) with bubbles: {T_mean_bub:.3f} +- {T_std_bub:.3f}'\n",
-    "      + f'\\n                       without bubbles: {T_mean_nobub:.3f} +- {T_std_nobub:.3f}')"
+    "print(f'Mean temperature (+- std) with bubbles: {T_mean_bub:.3f} +- {T_std_bub:.3f} K'\n",
+    "      + f'\\n                       without bubbles: {T_mean_nobub:.3f} +- {T_std_nobub:.3f} K')"
    ]
   },
   {
