--- a/HW1/ETPoF_HW1.ipynb
+++ b/HW1/ETPoF_HW1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c6962441",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4293e482",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fe432dad",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "45f96f23",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e7d702e2",
    "metadata": {},
    "outputs": [
@@ -305,9 +305,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A = 0.000999597    +- 2.5e-05\n",
-      "B = 0.0002427721   +- 4.3e-06\n",
-      "C = 1.46812769e-07 +- 1.8e-08\n"
+      "A = 0.000999597    +- 2.5e-05 1/K\n",
+      "B = 0.0002427721   +- 4.3e-06 1/(KΩ)\n",
+      "C = 1.46812769e-07 +- 1.8e-08 1/(KΩ^3)\n"
      ]
     }
    ],
@@ -334,9 +334,9 @@
     "\n",
     "errors = np.sqrt(np.diag(pcov))\n",
     "\n",
-    "print(f'A = {A:.6g}    +- {errors[0]:.2g}')\n",
-    "print(f'B = {B:.7g}   +- {errors[1]:.2g}')\n",
-    "print(f'C = {C:.9g} +- {errors[2]:.2g}')"
+    "print(f'A = {A:.6g}    +- {errors[0]:.2g} 1/K')\n",
+    "print(f'B = {B:.7g}   +- {errors[1]:.2g} 1/(KΩ)')\n",
+    "print(f'C = {C:.9g} +- {errors[2]:.2g} 1/(KΩ^3)')"
    ]
   },
   {
