Part 2a1 & 2a2 written out

--- a/HW2/ETPoF_HW2a.ipynb
+++ b/HW2/ETPoF_HW2a.ipynb
@@ -132,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2df24859be44d6eb5e6471c12a05559",
+       "model_id": "f28ba849ca8b4746a15e8c7c24d35d37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d168623d5c143ce821d6bfd16ce7d3b",
+       "model_id": "449064412a484faeb681986478525839",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average resolution is 0.13055 mm/px with a standard deviation of 0.00001 mm/px.\n"
+      "The average resolution is 0.23381 mm/px with a standard deviation of 0.25991 mm/px.\n"
      ]
     }
    ],
@@ -365,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe359c11b95848e48ff0ff3c9fc6520b",
+       "model_id": "717f0e47c30647daa16d75a39c770e0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,13 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a4e64fa8a9c485dbb500661378304ca",
+       "model_id": "94f9abcfcb5d4868a5c291f839742605",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,23 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2d1c3e390>"
+       "<matplotlib.image.AxesImage at 0x157f5e090>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7684ce440e944ecaca3d419aa8c712d",
+       "model_id": "705f74641866416a865696259eaf772c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,13 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "922f9156b36f43a9829e404b1df7aa2a",
+       "model_id": "adc1e05e67bb473982046d8cc76fb1a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -618,18 +618,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 390625 into shape (9,3,3)",
+     "ename": "NameError",
+     "evalue": "name 'resolution' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresolution\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 390625 into shape (9,3,3)"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresolution\u001b[49m[:, :]\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'resolution' is not defined"
      ]
     }
    ],
