--- a/HW2/HW_2.ipynb
+++ b/HW2/HW_2.ipynb
@@ -48,7 +48,7 @@
     "ret, labels, stats, centroids = cv.connectedComponentsWithStats(thresh)\n",
     "plt.imshow(img_corner)\n",
     "\n",
-    "#insert scaling function here\n",
+    "#insert scaling function here, centroid are NOT RETURNED IN ORDER it just seemed that way\n",
     "# so we have a scaling of...\n",
     "calibration = 1 #um/px\n",
     "dc = 0.1 # error in calibration"
