--- a/HW2/ETPoF_HW2a_3.ipynb
+++ b/HW2/ETPoF_HW2a_3.ipynb
@@ -485,7 +485,19 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'grid_found' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Clear all variables without removing the imported modules\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m [[cent_px, radii_px, cent_px_sort, dist_px, dist_px_sort,\n\u001b[1;32m      3\u001b[0m       grid_size_id, cent_id_sort, dist_id_sort, res,\n\u001b[0;32m----> 4\u001b[0m       calibration_distance, \u001b[43mgrid_found\u001b[49m, cent_blackbox,\n\u001b[1;32m      5\u001b[0m       dist_px_blackbox, res_blackbox, res_avg,\n\u001b[1;32m      6\u001b[0m       res_std, res_avg_blackbox, res_std_blackbox]]\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Import the second image in grayscale\u001b[39;00m\n\u001b[1;32m      9\u001b[0m img_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImages/Calibration_a/Realistic.png\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grid_found' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Clear all variables without removing the imported modules\n",
     "del [[cent_px, radii_px, cent_px_sort, dist_px, dist_px_sort,\n",
@@ -512,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1362,22 +1374,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can compare this to the openCV circle grid detection case."
+    "**Varying radius!!!**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Varying radius"
+    "#### Undistorting the image\n",
+    "Using the grid coordinates and the pincushion model, we can undistort the image."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Undistort image"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
