Fixed some last problems

--- a/HW3/ETPoF_HW3_1.ipynb
+++ b/HW3/ETPoF_HW3_1.ipynb
@@ -8,16 +8,8 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import cv2 as cv\n",
-    "from scipy import spatial\n",
-    "\n",
-    "from scipy.signal import find_peaks\n",
-    "from scipy.optimize import curve_fit\n",
-    "\n",
-    "\n",
-    "# import matplotlib\n",
-    "# matplotlib.use(\"nbagg\")"
+    "from scipy import spatial"
    ],
    "metadata": {
     "collapsed": false
@@ -158,8 +150,8 @@
     "    \"\"\"\n",
     "\n",
     "    # Mask the diagonal to avoid division by zero\n",
-    "    if mask_diagonal:\n",
-    "        mask = np.eye(values.shape[0], dtype=bool).__invert__()\n",
+    "    if mask_diagonal: mask = np.eye(values.shape[0], dtype=bool).__invert__()\n",
+    "    else: mask = np.ones_like(values, dtype=bool)\n",
     "\n",
     "    # Calculate the weighted average\n",
     "    average = np.average(values[mask], weights=weights[mask])\n",
@@ -177,9 +169,14 @@
     "    return average, deviation"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T10:26:17.025768Z",
+     "start_time": "2024-03-14T10:26:17.022625Z"
+    }
    },
-   "id": "7d7c9aa81cf2254f"
+   "id": "7d7c9aa81cf2254f",
+   "execution_count": 98
   },
   {
    "cell_type": "code",
@@ -243,7 +240,7 @@
    "source": [
     "def calibrate_camera(image, calib_dist, threshold, units=\"mm/px\", plot=False, \n",
     "                     verbose=False, precision=3, file_name=None):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Calibrate the resolution of a camera using a calibration image.\n",
     "    \n",
     "    PARAMETERS:\n",
@@ -258,7 +255,7 @@
     "            \n",
     "    RETURNS:\n",
     "        tuple: A tuple containing the average resolution and standard deviation.\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Average all pixels in the x-direction to get the intensity profile\n",
     "    int_profile = np.mean(image, axis=1)\n",
@@ -281,7 +278,7 @@
     "        \n",
     "    # Calculate the weighted average and standard deviation of the resolutions\n",
     "    res_avg, res_std = weighted_avg_and_std(res_matrix, dist_px, \n",
-    "                                            verbose=verbose, \n",
+    "                                            verbose=verbose, units=units,\n",
     "                                            precision=precision)\n",
     "\n",
     "    # Plot the cropped image and intensity profile side-by-side\n",
@@ -366,7 +363,7 @@
     "                                            file_name=files[idx])\n",
     "        \n",
     "    # Compare the resolutions of the different calibration images\n",
-    "    # TODO: Implement comparison of resolutions\n",
+    "    # TODO: Figure out how to compare the resolutions of the different images\n",
     "    \n",
     "    return res_avg, res_std\n"
    ],
@@ -471,7 +468,8 @@
     "calib_images = read_image_series('PTV', prefix='Calibration_b',\n",
     "                                 roi=[200, 250, 30, 670])\n",
     "\n",
-    "res_avg, res_std = calibrate_camera(calib_images[0], 500, 60, plot=True, \n",
+    "res_avg_list, res_std_list = calibrate_camera(calib_images[0], 500, 60, \n",
+    "                                            plot=True, \n",
     "                               verbose=True)\n"
    ],
    "metadata": {
