Move part 1 functions to separate module, create main notebook

--- a/HW3/Archive/ETPoF_HW3_1.ipynb
+++ b/HW3/Archive/ETPoF_HW3_1.ipynb
@@ -12,9 +12,14 @@
     "from scipy import spatial"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T15:55:18.740095Z",
+     "start_time": "2024-03-14T15:55:18.738276Z"
+    }
    },
-   "id": "e0caeb41af3a22d7"
+   "id": "e0caeb41af3a22d7",
+   "execution_count": 104
   },
   {
    "cell_type": "markdown",
