It does also run for b, no clue if everything makes sense

--- a/HW3/ETPoF_HW3_2.ipynb
+++ b/HW3/ETPoF_HW3_2.ipynb
@@ -225,35 +225,51 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 200/200 [00:00<00:00, 214.67it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "imgs, files = etpof.read_image_series('PTV', 'a')"
+    "imgs, files = etpof.read_image_series('PTV', 'b')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-18T16:21:45.071016Z",
+     "start_time": "2024-03-18T16:21:44.135275Z"
+    }
    },
    "id": "75d6778ea8bfef0b",
-   "execution_count": null
+   "execution_count": 147
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "imgs_nobg = [remove_background(img) for img in tqdm(imgs)]\n",
-    "\n",
-    "# Show the image and the processed image next to each other\n",
-    "fig, ax = plt.subplots(1,2, figsize = (8, 8))\n",
-    "ax[0].imshow(imgs[48], cmap = 'gray')\n",
-    "ax[1].imshow(imgs_nobg[48], cmap = 'gray')\n",
-    "ax[0].set_xlim(110, 130); ax[0].set_ylim(390, 370)\n",
-    "ax[1].set_xlim(110, 130); ax[1].set_ylim(390, 370)\n",
-    "plt.show()"
+    "# imgs_nobg = [remove_background(img) for img in tqdm(imgs)]\n",
+    "# \n",
+    "# # Show the image and the processed image next to each other\n",
+    "# fig, ax = plt.subplots(1,2, figsize = (8, 8))\n",
+    "# ax[0].imshow(imgs[48], cmap = 'gray')\n",
+    "# ax[1].imshow(imgs_nobg[48], cmap = 'gray')\n",
+    "# ax[0].set_xlim(110, 130); ax[0].set_ylim(390, 370)\n",
+    "# ax[1].set_xlim(110, 130); ax[1].set_ylim(390, 370)\n",
+    "# plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-18T16:21:56.225349Z",
+     "start_time": "2024-03-18T16:21:56.223864Z"
+    }
    },
    "id": "86c94cb1a5a2a31",
-   "execution_count": null
+   "execution_count": 149
   },
   {
    "cell_type": "code",
@@ -262,12 +278,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [00:08<00:00, 22.32it/s]\n"
+      "100%|██████████| 200/200 [00:08<00:00, 22.67it/s]\n"
      ]
     }
    ],
    "source": [
-    "particles_found = []\n",
+    "particles_found = np.empty(len(imgs))\n",
     "\n",
     "for image_no in trange(len(imgs)):\n",
     "    # image_no = 121\n",
@@ -312,17 +328,17 @@
     "            coords_err = np.vstack((coords_err, results[2]))\n",
     "            intensities_err = np.vstack((intensities_err, results[3]))\n",
     "            \n",
-    "    particles_found.append(len(coords))\n"
+    "    particles_found[image_no] = len(coords)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T16:18:59.123947Z",
-     "start_time": "2024-03-18T16:18:50.159284Z"
+     "end_time": "2024-03-18T16:22:07.526538Z",
+     "start_time": "2024-03-18T16:21:58.697617Z"
     }
    },
    "id": "1e32a654b1d093b2",
-   "execution_count": 144
+   "execution_count": 150
   },
   {
    "cell_type": "markdown",
