Cleaned up comments, added docstrings

--- a/HW3/Archive/ETPoF_HW3_2.ipynb
+++ b/HW3/Archive/ETPoF_HW3_2.ipynb
@@ -7,11 +7,23 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-19T10:07:21.234436Z",
-     "start_time": "2024-03-19T10:07:20.829457Z"
+     "end_time": "2024-03-19T10:54:13.903114Z",
+     "start_time": "2024-03-19T10:54:13.428013Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'etpof'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 6\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mscipy\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m ndimage\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mscipy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01moptimize\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m curve_fit\n\u001B[0;32m----> 6\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01metpof\u001B[39;00m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtqdm\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m tqdm\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtqdm\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m trange\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'etpof'"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import cv2 as cv\n",
@@ -84,7 +96,7 @@
    ],
    "source": [
     "coords, intensities, coords_err, intensities_err, particles_found\\\n",
-    "    = analyze_camera('PTV', 'a', res_avg/1000, min_cnt_area=1, \n",
+    "    = etpof.analyze_camera('PTV', 'a', res_avg/1000, min_cnt_area=1, \n",
     "                     min_intensity=200, neighbor_dist=2.5, box_margin=3, \n",
     "                     max_iter=5, verbose=True, plot=True)"
    ],
