Variable names match now

--- a/HW3/ETPoF_HW3.ipynb
+++ b/HW3/ETPoF_HW3.ipynb
@@ -369,7 +369,7 @@
    ],
    "source": [
     "# For camera a\n",
-    "coords_a, intensities_a, coords_err_a, intensities_err_a, particles_found_a \\\n",
+    "coordsA, intensitiesA, coords_errA, intensities_errA, particles_foundA \\\n",
     "    = etpof.analyze_camera('PTV', 'a', res_avg[0], offset[0],\n",
     "                           min_contour_area=1, min_intensity=200, \n",
     "                           neighbor_dist=2.5,\n",
@@ -414,7 +414,7 @@
    ],
    "source": [
     "# For camera b\n",
-    "coords_b, intensities_b, coords_err_b, intensities_err_b, particles_found_b \\\n",
+    "coordsB, intensitiesB, coords_errB, intensities_errB, particles_foundB \\\n",
     "    = etpof.analyze_camera('PTV', 'b', res_avg[1], offset[1],\n",
     "                           min_contour_area=1, min_intensity=200, \n",
     "                           neighbor_dist=2.5,\n",
@@ -457,9 +457,9 @@
    "source": [
     "# Plot the number of particles found by camera a and b over time in one figure\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(range(200), particles_found_a, alpha=0.5, c=\"r\",\n",
+    "ax.plot(range(200), particles_foundA, alpha=0.5, c=\"r\",\n",
     "label='Camera a')\n",
-    "ax.plot(range(200), particles_found_b, alpha=0.5, c=\"g\", \n",
+    "ax.plot(range(200), particles_foundB, alpha=0.5, c=\"g\", \n",
     "            label='Camera b')\n",
     "ax.set_xlabel('Frame')\n",
     "ax.set_ylabel('Particles found')\n",
@@ -504,12 +504,12 @@
    "source": [
     "# Plot the particle coordinates of all frames in one image\n",
     "fig, ax = plt.subplots(1,2, figsize=(8, 4))\n",
-    "ax[0].scatter(coords_a[:, 1], coords_a[:, 0], c='r', s=1)\n",
+    "ax[0].scatter(coordsA[:, 1], coordsA[:, 0], c='r', s=1)\n",
     "ax[0].set_xlabel('x [m]')\n",
     "ax[0].set_ylabel('z [m]')\n",
     "ax[0].invert_yaxis()\n",
     "ax[0].set_title('Camera a')\n",
-    "ax[1].scatter(coords_b[:, 1], coords_b[:, 0], c='g', s=1)\n",
+    "ax[1].scatter(coordsB[:, 1], coordsB[:, 0], c='g', s=1)\n",
     "ax[1].set_xlabel('y [m]')\n",
     "ax[1].set_ylabel('z [m]')\n",
     "ax[1].invert_yaxis()\n",
