--- a/HW4/ETPoF_HW4_b4_test.ipynb
+++ b/HW4/ETPoF_HW4_b4_test.ipynb
@@ -94,6 +94,25 @@
     "collapsed": false
    },
    "id": "4a6c226a12555147"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Refer to rules of thumb!"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a7bdd26ec18152c8"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6261b7915e7bcdb4"
   }
  ],
  "metadata": {
