Part b roughly finished

--- a/HW4/ETPoF_HW4_b3_test.ipynb
+++ b/HW4/ETPoF_HW4_b3_test.ipynb
@@ -60,7 +60,7 @@
     "file_prefix = None\n",
     "file_type = 'png'\n",
     "\n",
-    "images_sets, set_names = piv.read_image_sets(directory, file_prefix, file_type, grouping=True)"
+    "images_sets, set_names = piv.read_image_sets(directory, file_prefix, file_type, grouping_ab=True)"
    ],
    "metadata": {
     "collapsed": false,
