Video of frames

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.740856Z",
-     "start_time": "2024-04-16T10:15:32.208131Z"
+     "end_time": "2024-04-17T13:08:15.444290Z",
+     "start_time": "2024-04-17T13:08:14.784989Z"
     }
    },
    "id": "495ab8f398234f2b",
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.743126Z",
-     "start_time": "2024-04-16T10:15:32.741734Z"
+     "end_time": "2024-04-17T13:08:15.446809Z",
+     "start_time": "2024-04-17T13:08:15.445385Z"
     }
    },
    "id": "2c10eec96d0d1c1a",
@@ -78,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.746465Z",
-     "start_time": "2024-04-16T10:15:32.743790Z"
+     "end_time": "2024-04-17T13:08:15.450052Z",
+     "start_time": "2024-04-17T13:08:15.447484Z"
     }
    },
    "id": "226919282d3fffb2",
@@ -136,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.749777Z",
-     "start_time": "2024-04-16T10:15:32.747516Z"
+     "end_time": "2024-04-17T13:08:15.464128Z",
+     "start_time": "2024-04-17T13:08:15.461650Z"
     }
    },
    "id": "b31b4934aa521753",
@@ -161,8 +161,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.752835Z",
-     "start_time": "2024-04-16T10:15:32.750319Z"
+     "end_time": "2024-04-17T13:08:17.030267Z",
+     "start_time": "2024-04-17T13:08:17.027316Z"
     }
    },
    "id": "ebdb1dd12f1fba39",
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.772814Z",
-     "start_time": "2024-04-16T10:15:32.755113Z"
+     "end_time": "2024-04-17T13:08:20.404823Z",
+     "start_time": "2024-04-17T13:08:20.358148Z"
     }
    },
    "outputs": [],
@@ -289,12 +289,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:15:32.776411Z",
-     "start_time": "2024-04-16T10:15:32.773458Z"
+     "end_time": "2024-04-17T13:08:49.926930Z",
+     "start_time": "2024-04-17T13:08:49.923071Z"
     }
    },
    "id": "8f9bfcae94418ad0",
    "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "12786"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_frames['pos3-2']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-17T13:09:20.445755Z",
+     "start_time": "2024-04-17T13:09:20.443082Z"
+    }
+   },
+   "id": "b300fd24ac23795a",
+   "execution_count": 10
   },
   {
    "cell_type": "code",
